# interaktyv-project

./: CNAME  README.md
client/: INTERPOLATION.md  index.html  main.js  package-lock.json  package.json  vite.config.js
client/public/assets/: firstLevel.glb  mainLevel.blend  mainLevel.blend1  mainLevel.glb  mainfrog.glb  mainfrog1.blend  mainfrog1.blend1  second-level.json  secondLevel.glb
client/public/paths/: zuma_path.json
client/src/: main.js  mainOG.js  web_socket.js
client/src/assets/: mainfrog.blend  mainfrog.blend1
client/src/core/: gameClient.js  mainMenu.js  webSocketClient.js
client/src/input/: inputHandler.js
client/src/rendering/: levelManager.js  marbleRenderer.js  playerRenderer.js  sceneManager.js  uiHandler.js
helpers/: pathscript.py
server/: Cargo.toml
server/paths/: first-level.json  second-level.json
server/src/: game.rs  main.rs  mod.rs  network.rs  room.rs
